# GWAS_automatic_analysis

./: .gitignore  Classes.py  README.md  build.go  build.sh  main.py  mytest.py  pyproject.toml  requirements.txt  setup.bash
args_setup/: myargs.py
gwas_check/: file_format_check.py
myutil/: association_analysis.py  complements.py  ethnic_serial_reference_lite.tsv  gender_serial_reference.csv  gender_serial_reference.tsv  group_division.py  mds.py  quality_control.py  small_tools.py  summarization.py  visualisations.py
test_data/: .gitignore  STAB2_standardised_f.30820.0.0.tsv  STAB2_white_male_filtered.bed  STAB2_white_male_filtered.bim  assoc_mperm.qassoc  assoc_mperm.qassoc.means  assoc_mperm.qassoc.mperm
testsuit/: Ethnic background.xlsx  Red blood cell count.xlsx  test.bash  test.py
testsuite/: Sex.xlsx  test.bash  test.py
toolkit/annotate_positive_snps/: Cargo.toml
toolkit/annotate_positive_snps/crates/annotation/: Cargo.toml
toolkit/annotate_positive_snps/crates/annotation/src/: lib.rs  main.rs
toolkit/annotate_positive_snps/crates/concat_vcf/: Cargo.toml
toolkit/annotate_positive_snps/crates/concat_vcf/src/: lib.rs
toolkit/annotate_positive_snps/crates/filter-snp/: Cargo.toml
toolkit/annotate_positive_snps/crates/filter-snp/src/: lib.rs  main.rs
toolkit/annotate_positive_snps/crates/fm/: Cargo.toml
toolkit/annotate_positive_snps/crates/fm/src/: lib.rs
toolkit/annotate_positive_snps/crates/summarization/: Cargo.toml  README.md
toolkit/annotate_positive_snps/crates/summarization/src/: lib.rs  main.rs
toolkit/annotate_positive_snps/src/: main.rs
toolkit/binary_phenotype_genesis/: README.md  go.mod  main.go
toolkit/binary_phenotype_genesis/cli/: root.go
toolkit/binary_phenotype_genesis/parser/FileType/: file_type.go
toolkit/binary_phenotype_genesis/parser/decoder/: decoder.go  decoder_test.go
toolkit/binary_phenotype_genesis/parser/encoder/: encoder.go  encoder_test.go
toolkit/binary_phenotype_genesis/testfiles/examples/: E78 Disorders of lipoprotein metabolism and other lipidaemias.csv
toolkit/binary_phenotype_genesis/testfiles/fid_and_iid/: all_participants.tsv  all_participants_with_header.csv  positive 3.tsv
toolkit/binary_phenotype_genesis/testfiles/only_iid/: example_all_participants_iid  positive 2
toolkit/convert_date_to_age/: Cargo.toml
toolkit/convert_date_to_age/src/: main.rs
toolkit/copy_fid_from_iid/: Cargo.toml  README.md
toolkit/copy_fid_from_iid/src/: errors.rs  lib.rs  main.rs  parser.rs
toolkit/extract_csv_columns/: extract_csv_columns.py
toolkit/result_analysis/: README.md  cli.py  libutils.py  main.py  project.toml  requirements.txt  run.sh  test.py
