[package]
name = "annotate_positive_snps"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
clap.workspace = true
fm.workspace = true
anyhow.workspace = true
filter-snp = { path = "crates/filter-snp" }
concat_vcf = { path = "crates/concat_vcf" }
annotation = { path = "crates/annotation" }

[workspace]
resolver = "2"
members = [
    "crates/annotation",
    "crates/concat_vcf",
    "crates/filter-snp",
    "crates/fm",
    "crates/summarization",
]

[workspace.package]
version = "0.1.0"
authors = ["Hammerklavier-cn"]
edition = "2024"
description = "A tool to extract designated SNPs from a .bed or .vcf file and annotate SNPs' effects"
readme = "README.md"

[workspace.dependencies]

anyhow = "1.0"
clap = { version = "4.5.38", features = ["derive"] }
fm = { path = "crates/fm", features = ["set_env"] }
which = { version = "7.0.3" }
annotation = { path = "crates/annotation" }
